# translate_tra

./: .gitignore  1.txt  11.txt  2.txt  CLAUDE.md  DParser.g4  README.md  add_markers.sh  add_prefix_to_global_vars_in_d_and_baf.py  analyze_d_speakers.py  bg2_yo_fixes.txt  bg2ee_yo_patch.diff  change_files_using_closest_table.py  change_lines.sh  check_lines.sh  check_words_in_file.py  closest_lines_in_tra_build_table.py  concatenate_images.py  convert_wed_png_for_ee.py  cp1251_2_utf8.sh  cp1252_2_utf8.sh  cre_with_0_morale_break.txt  cut_replace_image.py  deepl_test.py  dialog-eng-sil.tra  dialog-eng.tra  elminsa_deepl.tra  elminsa_googlecloud.tra  elminsa_googletrans.tra  elminsa_textblob.tra  elminsa_yandex.tra  extract_lines_tra.py  find_closest_lines_in_tra.py  find_closest_lines_in_tra2.py  find_items.py  find_some_lines_in_file_not_generic.py  fix_translated_yandex_folder.sh  flip_every_line.py  folder_processing.sh  folder_processing_update_tra.sh  (+38 more)
are_rest_interruption/: Cargo.toml  SP1100.ARE  TC0012.ARE
cre_morale/: Cargo.toml
map_res/: NW1000.WED
out_map_res/: NW1000.WED  NW1219.WED
toeeextract/: CMakeLists.txt  ToEExtract.cpp  ToEExtract.h
tra_files_llm_translating/: DLexer.g4  DLexer.interp  DLexer.py  DParser.interp  DParser.py  DParser.tokens  DParserListener.py  TODO.txt  actor_description.csv  actors.csv  blacklist.txt  collect_english_names.py  create_scv_table_from_d_tra_files.py  dict.csv  extract_actors_using_grammar.py  find_translations_with_llm.py  how_to_run.txt  parse_d_grammar.py  translate_dialogs.py  update_tra_from_csv.py  (+2 more)
(+2 files in other folders)
